[gd_scene load_steps=20 format=4 uid="uid://b1gx15v71ge15"]

[ext_resource type="Texture2D" uid="uid://capn7wain57ar" path="res://assets/GUI_sprite/square_set.png" id="1_ixdtv"]
[ext_resource type="Script" uid="uid://c7y7i8qorsl72" path="res://scripts/game.gd" id="1_ntxld"]
[ext_resource type="Texture2D" uid="uid://wyve4t5bny04" path="res://assets/GUI_sprite/square_background.png" id="2_xbsld"]
[ext_resource type="Script" uid="uid://cd264fsac3q3i" path="res://scripts/GameBoard.gd" id="3_mpuo0"]
[ext_resource type="Script" uid="uid://bujyvyljc5ejp" path="res://scripts/PieceQueue.gd" id="4_0vj3b"]
[ext_resource type="Script" uid="uid://do12uxobnkg7j" path="res://scripts/InputHandler.gd" id="5_glex3"]
[ext_resource type="Script" uid="uid://cyue7hhxlx1l3" path="res://scripts/Level.gd" id="6_cth57"]
[ext_resource type="Texture2D" uid="uid://dl6ohc02vpxf6" path="res://assets/charge_bar.png" id="7_q2jha"]
[ext_resource type="Script" uid="uid://cely6f32ajh8q" path="res://scripts/ChargeBar.gd" id="8_t42de"]
[ext_resource type="AudioStream" uid="uid://cns3punlixiit" path="res://assets/Audio/osu-hit-sound.mp3" id="9_hguvt"]
[ext_resource type="Script" uid="uid://chn6ac1l7sdab" path="res://scripts/Inventory.gd" id="9_mwxk3"]
[ext_resource type="AudioStream" uid="uid://0kkutm31exu7" path="res://assets/Audio/spinnerbonus.wav" id="10_0lu6w"]
[ext_resource type="Shader" uid="uid://dwbyqlegps0p0" path="res://scripts/blur.gdshader" id="10_qnmrm"]
[ext_resource type="Script" uid="uid://bv5hlj4v522ht" path="res://scripts/spin_move_label.gd" id="11_kbu3f"]
[ext_resource type="PackedScene" uid="uid://b4ced4qq8ab8s" path="res://scene/boss.tscn" id="12_8ll6t"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_78q27"]
shader = ExtResource("10_qnmrm")
shader_parameter/blur_amount = 3.506
shader_parameter/mix_amount = 0.495
shader_parameter/color_over = Color(1, 1, 1, 0)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2c3e3"]
texture = ExtResource("1_ixdtv")
texture_region_size = Vector2i(8, 8)
0:0/next_alternative_id = 9
0:0/0 = 0
0:0/1 = 1
0:0/1/modulate = Color(0, 1, 1, 1)
0:0/2 = 2
0:0/2/modulate = Color(1, 1, 0, 1)
0:0/3 = 3
0:0/3/modulate = Color(0.501961, 0, 0.501961, 1)
0:0/4 = 4
0:0/4/modulate = Color(0, 1, 0, 1)
0:0/5 = 5
0:0/5/modulate = Color(1, 0, 0, 1)
0:0/6 = 6
0:0/6/modulate = Color(0, 0, 1, 1)
0:0/7 = 7
0:0/7/modulate = Color(1, 0.498039, 0, 1)
0:0/8 = 8
0:0/8/modulate = Color(0, 0, 0, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3pvtj"]
texture = ExtResource("2_xbsld")
texture_region_size = Vector2i(8, 8)
0:0/next_alternative_id = 2
0:0/0 = 0
0:0/1 = 1
0:0/1/modulate = Color(0, 0, 0, 1)

[sub_resource type="TileSet" id="TileSet_sxls5"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_2c3e3")
sources/1 = SubResource("TileSetAtlasSource_3pvtj")

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -1.0
offset_top = -3.0
offset_right = -1.0
offset_bottom = -3.0
pivot_offset = Vector2(569, 287)
script = ExtResource("1_ntxld")

[node name="GameBoard" type="Node2D" parent="." groups=["game"]]
position = Vector2(200, 145)
script = ExtResource("3_mpuo0")

[node name="PieceDropTimer" type="Timer" parent="GameBoard" groups=["gameplay_timers"]]

[node name="PieceQueue" type="Node" parent="GameBoard"]
script = ExtResource("4_0vj3b")

[node name="InputHandler" type="Node" parent="GameBoard"]
script = ExtResource("5_glex3")

[node name="DASLeftTimer" type="Timer" parent="GameBoard/InputHandler" groups=["gameplay_timers"]]

[node name="DASRightTimer" type="Timer" parent="GameBoard/InputHandler" groups=["gameplay_timers"]]

[node name="ARRLeftTimer" type="Timer" parent="GameBoard/InputHandler" groups=["gameplay_timers"]]

[node name="ARRRightTimer" type="Timer" parent="GameBoard/InputHandler" groups=["gameplay_timers"]]

[node name="SDRTimer" type="Timer" parent="GameBoard/InputHandler" groups=["gameplay_timers"]]

[node name="PauseBlur" type="ColorRect" parent="GameBoard"]
z_index = 3
material = SubResource("ShaderMaterial_78q27")
offset_left = -199.0
offset_top = -138.0
offset_right = 950.0
offset_bottom = 504.0

[node name="AutoLockTimer" type="Timer" parent="GameBoard" groups=["gameplay_timers"]]
wait_time = 3.0

[node name="MoveAudio" type="AudioStreamPlayer" parent="GameBoard"]
stream = ExtResource("9_hguvt")
volume_db = -20.0
max_polyphony = 2

[node name="SpinAudio" type="AudioStreamPlayer" parent="GameBoard"]
stream = ExtResource("10_0lu6w")
volume_db = -10.0

[node name="TileMapLayers" type="Node2D" parent="GameBoard"]

[node name="Background" type="TileMapLayer" parent="GameBoard/TileMapLayers"]
modulate = Color(1, 1, 1, 0.572549)
use_parent_material = true
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAAABUAAQAAAAAAAAAAABQAAQAAAAAAAAAAABMAAQAAAAAAAAAAABIAAQAAAAAAAAAAABEAAQAAAAAAAAAAABAAAQAAAAAAAAAAAA8AAQAAAAAAAAAAAA4AAQAAAAAAAAAAAA0AAQAAAAAAAAAAAAwAAQAAAAAAAAAAAAsAAQAAAAAAAAAAAAoAAQAAAAAAAAAAAAkAAQAAAAAAAAAAAAgAAQAAAAAAAAAAAAcAAQAAAAAAAAAAAAYAAQAAAAAAAAAAAAUAAQAAAAAAAAAAAAQAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAAAAAQAAAAAAAAABAAAAAQAAAAAAAAABAAEAAQAAAAAAAAABAAIAAQAAAAAAAAABAAMAAQAAAAAAAAABAAQAAQAAAAAAAAABAAUAAQAAAAAAAAABAAYAAQAAAAAAAAABAAcAAQAAAAAAAAABAAgAAQAAAAAAAAABAAkAAQAAAAAAAAABAAoAAQAAAAAAAAABAAsAAQAAAAAAAAABAAwAAQAAAAAAAAABAA0AAQAAAAAAAAABAA4AAQAAAAAAAAABAA8AAQAAAAAAAAABABAAAQAAAAAAAAABABEAAQAAAAAAAAABABIAAQAAAAAAAAABABMAAQAAAAAAAAABABQAAQAAAAAAAAABABUAAQAAAAAAAAACABUAAQAAAAAAAAACABQAAQAAAAAAAAACABMAAQAAAAAAAAACABIAAQAAAAAAAAACABEAAQAAAAAAAAACABAAAQAAAAAAAAACAA8AAQAAAAAAAAACAA4AAQAAAAAAAAACAA0AAQAAAAAAAAACAAwAAQAAAAAAAAACAAsAAQAAAAAAAAACAAoAAQAAAAAAAAACAAkAAQAAAAAAAAACAAgAAQAAAAAAAAACAAcAAQAAAAAAAAACAAYAAQAAAAAAAAACAAUAAQAAAAAAAAACAAQAAQAAAAAAAAACAAMAAQAAAAAAAAACAAIAAQAAAAAAAAACAAEAAQAAAAAAAAACAAAAAQAAAAAAAAADAAAAAQAAAAAAAAADAAEAAQAAAAAAAAADAAIAAQAAAAAAAAADAAMAAQAAAAAAAAADAAQAAQAAAAAAAAADAAUAAQAAAAAAAAADAAYAAQAAAAAAAAADAAcAAQAAAAAAAAADAAgAAQAAAAAAAAADAAkAAQAAAAAAAAADAAoAAQAAAAAAAAADAAsAAQAAAAAAAAADAAwAAQAAAAAAAAADAA0AAQAAAAAAAAADAA4AAQAAAAAAAAADAA8AAQAAAAAAAAADABAAAQAAAAAAAAADABEAAQAAAAAAAAADABIAAQAAAAAAAAADABMAAQAAAAAAAAADABQAAQAAAAAAAAADABUAAQAAAAAAAAAEABUAAQAAAAAAAAAEABQAAQAAAAAAAAAEABMAAQAAAAAAAAAEABIAAQAAAAAAAAAEABEAAQAAAAAAAAAEABAAAQAAAAAAAAAEAA8AAQAAAAAAAAAEAA4AAQAAAAAAAAAEAA0AAQAAAAAAAAAEAAwAAQAAAAAAAAAEAAsAAQAAAAAAAAAEAAoAAQAAAAAAAAAEAAkAAQAAAAAAAAAEAAgAAQAAAAAAAAAEAAcAAQAAAAAAAAAEAAYAAQAAAAAAAAAEAAUAAQAAAAAAAAAEAAQAAQAAAAAAAAAEAAMAAQAAAAAAAAAEAAIAAQAAAAAAAAAEAAEAAQAAAAAAAAAEAAAAAQAAAAAAAAAFAAAAAQAAAAAAAAAFAAEAAQAAAAAAAAAFAAIAAQAAAAAAAAAFAAMAAQAAAAAAAAAFAAQAAQAAAAAAAAAFAAUAAQAAAAAAAAAFAAYAAQAAAAAAAAAFAAcAAQAAAAAAAAAFAAgAAQAAAAAAAAAFAAkAAQAAAAAAAAAFAAoAAQAAAAAAAAAFAAsAAQAAAAAAAAAFAAwAAQAAAAAAAAAFAA0AAQAAAAAAAAAFAA4AAQAAAAAAAAAFAA8AAQAAAAAAAAAFABAAAQAAAAAAAAAFABEAAQAAAAAAAAAFABIAAQAAAAAAAAAFABMAAQAAAAAAAAAFABQAAQAAAAAAAAAFABUAAQAAAAAAAAAGABUAAQAAAAAAAAAGABQAAQAAAAAAAAAGABMAAQAAAAAAAAAGABIAAQAAAAAAAAAGABEAAQAAAAAAAAAGABAAAQAAAAAAAAAGAA8AAQAAAAAAAAAGAA4AAQAAAAAAAAAGAA0AAQAAAAAAAAAGAAwAAQAAAAAAAAAGAAsAAQAAAAAAAAAGAAoAAQAAAAAAAAAGAAkAAQAAAAAAAAAGAAgAAQAAAAAAAAAGAAcAAQAAAAAAAAAGAAYAAQAAAAAAAAAGAAUAAQAAAAAAAAAGAAQAAQAAAAAAAAAGAAMAAQAAAAAAAAAGAAIAAQAAAAAAAAAGAAEAAQAAAAAAAAAGAAAAAQAAAAAAAAAHAAAAAQAAAAAAAAAHAAEAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAMAAQAAAAAAAAAHAAQAAQAAAAAAAAAHAAUAAQAAAAAAAAAHAAYAAQAAAAAAAAAHAAcAAQAAAAAAAAAHAAgAAQAAAAAAAAAHAAkAAQAAAAAAAAAHAAoAAQAAAAAAAAAHAAsAAQAAAAAAAAAHAAwAAQAAAAAAAAAHAA0AAQAAAAAAAAAHAA4AAQAAAAAAAAAHAA8AAQAAAAAAAAAHABAAAQAAAAAAAAAHABEAAQAAAAAAAAAHABIAAQAAAAAAAAAHABMAAQAAAAAAAAAHABQAAQAAAAAAAAAHABUAAQAAAAAAAAAIABUAAQAAAAAAAAAIABQAAQAAAAAAAAAIABMAAQAAAAAAAAAIABIAAQAAAAAAAAAIABEAAQAAAAAAAAAIABAAAQAAAAAAAAAIAA8AAQAAAAAAAAAIAA4AAQAAAAAAAAAIAA0AAQAAAAAAAAAIAAwAAQAAAAAAAAAIAAsAAQAAAAAAAAAIAAoAAQAAAAAAAAAIAAkAAQAAAAAAAAAIAAgAAQAAAAAAAAAIAAcAAQAAAAAAAAAIAAYAAQAAAAAAAAAIAAUAAQAAAAAAAAAIAAQAAQAAAAAAAAAIAAMAAQAAAAAAAAAIAAIAAQAAAAAAAAAIAAEAAQAAAAAAAAAIAAAAAQAAAAAAAAAJAAAAAQAAAAAAAAAJAAEAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAMAAQAAAAAAAAAJAAQAAQAAAAAAAAAJAAUAAQAAAAAAAAAJAAYAAQAAAAAAAAAJAAcAAQAAAAAAAAAJAAgAAQAAAAAAAAAJAAkAAQAAAAAAAAAJAAoAAQAAAAAAAAAJAAsAAQAAAAAAAAAJAAwAAQAAAAAAAAAJAA0AAQAAAAAAAAAJAA4AAQAAAAAAAAAJAA8AAQAAAAAAAAAJABAAAQAAAAAAAAAJABEAAQAAAAAAAAAJABIAAQAAAAAAAAAJABMAAQAAAAAAAAAJABQAAQAAAAAAAAAJABUAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_sxls5")

[node name="ExistingTiles" type="TileMapLayer" parent="GameBoard/TileMapLayers"]
use_parent_material = true
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_sxls5")

[node name="GhostPiece" type="TileMapLayer" parent="GameBoard/TileMapLayers"]
modulate = Color(1, 1, 1, 0.52549)
use_parent_material = true
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_sxls5")

[node name="CurrentPiece" type="TileMapLayer" parent="GameBoard/TileMapLayers"]
use_parent_material = true
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_sxls5")

[node name="HUD" type="TileMapLayer" parent="GameBoard/TileMapLayers"]
use_parent_material = true
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_sxls5")

[node name="Level" type="Node2D" parent="."]
position = Vector2(45, 4)
script = ExtResource("6_cth57")

[node name="ScoreLabel" type="Label" parent="Level"]
offset_left = 203.0
offset_top = 116.0
offset_right = 258.0
offset_bottom = 139.0
text = "0"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="Level"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 481.0
offset_top = 334.0
offset_right = 592.0
offset_bottom = 372.0
grow_vertical = 2
pivot_offset = Vector2(0, -6)
text = "Level 1"

[node name="TargetScoreLabel" type="Label" parent="Level"]
offset_left = 481.0
offset_top = 365.0
offset_right = 588.0
offset_bottom = 427.0
text = "Score to beat:
1000"

[node name="ComboLabel" type="Label" parent="Level"]
show_behind_parent = true
offset_left = 47.0
offset_top = 360.0
offset_right = 149.0
offset_bottom = 403.0
text = "10x combo"
horizontal_alignment = 2

[node name="ChargeBar" type="Sprite2D" parent="Level"]
position = Vector2(327, 496)
rotation = -1.5708
scale = Vector2(0.185128, 0.169164)
texture = ExtResource("7_q2jha")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 1891.88, 62)
script = ExtResource("8_t42de")

[node name="MultiplierLabel" type="Label" parent="Level"]
offset_left = 219.0
offset_top = 506.0
offset_right = 304.0
offset_bottom = 539.0
text = "1 mult"

[node name="SpinMoveLabel" type="Label" parent="Level"]
offset_left = 62.0
offset_top = 293.0
offset_right = 142.0
offset_bottom = 359.0
theme_override_font_sizes/font_size = 21
text = "T-spin
Triple"
script = ExtResource("11_kbu3f")

[node name="FadeTimer" type="Timer" parent="Level/SpinMoveLabel"]
wait_time = 3.0

[node name="Inventory" type="Node2D" parent="."]
position = Vector2(1, 3)
script = ExtResource("9_mwxk3")

[node name="MoneyLabel" type="Label" parent="Inventory"]
modulate = Color(1, 0.984314, 0, 1)
offset_left = 1.0
offset_top = 2.0
offset_right = 57.0
offset_bottom = 43.0
theme_override_font_sizes/font_size = 29
text = "5$"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Boss" parent="." instance=ExtResource("12_8ll6t")]
position = Vector2(546, 182)
scale = Vector2(0.7, 0.7)

[connection signal="clear_lines_signal" from="GameBoard" to="." method="clear_lines"]
[connection signal="clear_lines_signal" from="GameBoard" to="Level/SpinMoveLabel" method="_on_tile_map_clear_lines_signal"]
[connection signal="timeout" from="GameBoard/PieceDropTimer" to="GameBoard" method="_on_piece_drop_timer_timeout"]
[connection signal="charge_attack" from="GameBoard/InputHandler" to="." method="use_charge"]
[connection signal="hard_drop" from="GameBoard/InputHandler" to="GameBoard" method="hard_drop"]
[connection signal="hold_piece" from="GameBoard/InputHandler" to="GameBoard" method="hold_piece"]
[connection signal="max_move" from="GameBoard/InputHandler" to="GameBoard" method="max_move"]
[connection signal="move" from="GameBoard/InputHandler" to="GameBoard" method="move"]
[connection signal="rotate_180" from="GameBoard/InputHandler" to="GameBoard" method="rotate_180"]
[connection signal="rotate_clockwise" from="GameBoard/InputHandler" to="GameBoard" method="rotate_clockwise"]
[connection signal="rotate_counterclockwise" from="GameBoard/InputHandler" to="GameBoard" method="rotate_counterclockwise"]
[connection signal="timeout" from="GameBoard/InputHandler/DASLeftTimer" to="GameBoard/InputHandler" method="_on_das_left_timer_timeout"]
[connection signal="timeout" from="GameBoard/InputHandler/DASRightTimer" to="GameBoard/InputHandler" method="_on_das_right_timer_timeout"]
[connection signal="timeout" from="GameBoard/InputHandler/ARRLeftTimer" to="GameBoard/InputHandler" method="_on_arr_left_timer_timeout"]
[connection signal="timeout" from="GameBoard/InputHandler/ARRRightTimer" to="GameBoard/InputHandler" method="_on_arr_right_timer_timeout"]
[connection signal="timeout" from="GameBoard/InputHandler/SDRTimer" to="GameBoard/InputHandler" method="_on_sdr_timer_timeout"]
[connection signal="timeout" from="GameBoard/AutoLockTimer" to="GameBoard" method="auto_lock"]
[connection signal="timeout" from="Level/SpinMoveLabel/FadeTimer" to="Level/SpinMoveLabel" method="_on_fade_timer_timeout"]
